--- a/src/main.css
+++ b/src/main.css
@@ -21,6 +21,67 @@ body {
     background-color: #121212FF
 }
 
+.badge-container {
+    display: flex;
+    align-items: center;
+    background: rgba(255, 255, 255, 0.1);
+    padding: 12px;
+    border-radius: 10px;
+    width: fit-content;
+    color: white;
+    font-family: "Titillium Web", sans-serif;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(5px);
+
+    position: fixed;
+    top: 30px;
+    right: 30px;
+    z-index: 1000;
+}
+
+.badge-container:hover {
+    background: rgba(255, 255, 255, 0.15);
+    transition: all 0.3s ease;
+}
+
+.circle {
+    width: 30px;
+    height: 30px;
+    background: #ff0000;
+    border-radius: 10000px;
+    margin-right: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.circle::before {
+    content: "";
+    width: 10px;
+    height: 10px;
+    background: #fc0303;
+    border-radius: 1000px;
+}
+
+.text-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.title {
+    font-size: 18px;
+    font-weight: bold;
+    margin: 0;
+    font-family: "Titillium Web", sans-serif;
+}
+
+.subtitle {
+    font-size: 14px;
+    color: rgba(255, 255, 255, 0.7);
+    margin: 0;
+    font-family: "Titillium Web", sans-serif;
+}
+
 #hero {
     height: 100vh;
     display: flex;
@@ -34,6 +95,8 @@ body {
 
     background-size: 100% 100%, 40px 40px, 40px 40px;
 }
+
+
 
 #hero img {
     width: 70px;
@@ -78,13 +141,39 @@ body {
     padding: .5em 1em;
     border-radius: 10px;
     color: white;
-    transition: 0.5s;
+    transition: all 0.5s ease;
     cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
     border: 1px solid white;
     background-color: #151515;
+    background-size: 200% auto;
+    background-position: left center;
+}
+
+#hero .myResume:hover {
+    background: linear-gradient(45deg, #091df6, #8708ee, #ea360e, #ea360e);
+    background-size: 300% auto;
+    border: 1px solid transparent;
+    animation: gradientFlow 3s ease infinite;
+}
+
+@keyframes gradientFlow {
+    0% {
+        background-position: 0% center;
+    }
+    50% {
+        background-position: 100% center;
+    }
+
+    55% {
+        background-position: 70% center;
+    }
+
+    100% {
+        background-position: 0% center;
+    }
 }
 
 #hero span {
@@ -128,7 +217,14 @@ body {
     font-weight: 800;
     font-size: 30px;
     margin-bottom: 10px;
+    background: linear-gradient(45deg, #091df6, #8708ee, #ea360e);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-size: 200% auto;
+
+    animation: gradientFlow 3s ease infinite;
 }
+
 
 #hero .content p {
     font-family: Lexend, serif;
