--- a/src/main.css
+++ b/src/main.css
@@ -242,10 +242,11 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.42);
+    background: rgba(0, 0, 0, 0.72);
     display: none;
     opacity: 0;
     transition: opacity 0.3s ease;
+    cursor: url("../assets/cursors/X.cur"), auto;
 }
 
 .modal {
@@ -259,7 +260,7 @@ body {
     border-radius: 2rem;
     border: 8px solid #1f2937;
     transition: bottom 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-    cursor: url('../assets/ipadCursor.cur'), auto;
+    cursor: url('../assets/cursors/ipadCursor.cur'), auto;
     z-index: 50;
 }
 
@@ -304,6 +305,7 @@ body {
     height: 4px;
     background: #191a1a;
     border-radius: 9999px;
+    cursor: none;
 }
 
 .close-button {
@@ -315,7 +317,7 @@ body {
     color: white;
     border: none;
     border-radius: 8px;
-    cursor: url("../assets/ipadCursor.cur"), auto;
+    cursor: none;
 }
 
 .close-button:hover {
